--- a/css/teaStore.css
+++ b/css/teaStore.css
@@ -1,37 +1,85 @@
-.main-section{
-	background-color: #F8F8F8;
-	margin-top:40px;
+.main-section {
+    background-color: #F8F8F8;
+    
 }
 
-.dropdown{
-	float: left;;
-	padding-right: 30px;
-}
-.btn{
-	border:0px;
-	margin:10px 0px;
-	box-shadow:none !important; 
-}
-.dropdown .dropdown-menu{
-	padding:20px;
-	top:20px !important;
-	width:500px !important;
-	left:-130px !important;
-}
-.total-header-section{
-	border-bottom:1px solid #d2d2d2;
+.dropdown {
+    float: left;
+    
+    padding-right: 30px;
 }
 
+.btn {
+    border: 0px;
+    margin: 10px 0px;
+    box-shadow: none !important;
+}
 
-.checkout .btn-primary{
-    height:40px;
+.dropdown .dropdown-menu {
+    padding: 20px;
+    top: 20px !important;
+    width: 500px !important;
+    left: -130px !important;
+}
+
+.total-header-section {
+    border-bottom: 1px solid #d2d2d2;
+}
+
+.total-section p {
+    margin-bottom: 20px;
+}
+
+.cart-detail {
+    padding: 15px 0px;
+}
+
+.cart-detail-img img {
+    width: 100%;
+    height: 100%;
+    padding-left: 15px;
+}
+
+.cart-detail-product p {
+    margin: 0px;
+    color: #000;
+    font-weight: 500;
+}
+
+.cart-detail .price {
+    font-size: 12px;
+    margin-right: 10px;
+    font-weight: 500;
+}
+
+.cart-detail .count {
+    color: #C2C2DC;
+}
+
+.checkout {
+    border-top: 1px solid #d2d2d2;
+    padding-top: 15px;
+}
+
+.checkout .btn-primary {
+    height: 40px;
     background-color: green;
 }
 
 .empty {
-    border-top:1px solid #d2d2d2;	
-	padding-top: 15px;
+    border-top: 1px solid #d2d2d2;
+    padding-top: 15px;
 }
+
+.dropdown-menu:before {
+    content: " ";
+    position: absolute;
+    top: -20px;
+    right: 50px;
+    border: 10px solid transparent;
+    border-bottom-color: #fff;
+}
+
 
 .quantity {
     float: left;
@@ -68,7 +116,8 @@
     background-clip: padding-box
 }
 
-.quantity .minus, .quantity .plus {
+.quantity .minus,
+.quantity .plus {
     line-height: 0;
     background-clip: padding-box;
     color: #bbb;
@@ -82,27 +131,64 @@
     z-index: 3
 }
 
-.quantity .minus:hover, .quantity .plus:hover {
+.quantity .minus:hover,
+.quantity .plus:hover {
     background-color: #dad8da
 }
 
 .quantity .minus {
     bottom: 0
 }
+
 .shopping-cart {
     margin-top: 20px;
 }
 
-#item{
+#item {
     height: auto;
 }
 
-#teaImage{
+.img-fluid {
     height: 150px;
     width: 150px
-    
-}   
+}
 
+.max {
+    width: 100%;
+    height: auto;
+}
+
+#title{
+    margin:0 auto;
+    text-align: center;
+    background-color: transparent;
+    margin-bottom: 0;
+    padding: 2rem 0rem;
+    
+}
+
+header{
+    margin-bottom: 10px;
+   
+}
+
+#background{
+    background-image: url("../teaPics/newBackground.PNG");
+    background-size: cover;
+    background-position: bottom;
+}
+
+#cite{
+    padding-bottom: 15px;
+}
+
+.hidePic{
+    display: none;
+}
+.showPic{
+    display: block;
+    position: absolute; 
+}
 
 .btn-circle {
     width: 30px;
