New shopping cart!

--- a/css/teaStore.css
+++ b/css/teaStore.css
@@ -40,22 +40,6 @@
     padding-left: 15px;
 }
 
-.cart-detail-product p {
-    margin: 0px;
-    color: #000;
-    font-weight: 500;
-}
-
-.cart-detail .price {
-    font-size: 12px;
-    margin-right: 10px;
-    font-weight: 500;
-}
-
-.cart-detail .count {
-    color: #C2C2DC;
-}
-
 .checkout {
     border-top: 1px solid #d2d2d2;
     padding-top: 15px;
@@ -72,7 +56,6 @@
 }
 
 .dropdown-menu:before {
-    content: " ";
     position: absolute;
     top: -20px;
     right: 50px;
@@ -198,4 +181,64 @@ header{
     text-align: center;
     font-size: 12px;
     line-height: 1.42857;
+}
+
+.close {
+    position: absolute;
+    right: 22px;
+    top: 0px;
+    width: 32px;
+    height: 32px;
+    opacity: 0.5;
+}
+.close:hover {
+    opacity: 1;
+}
+.close:before, .close:after {
+    position: absolute;
+    left: 10px;
+    content: ' ';
+    height: 23px;
+    width: 3px;
+    background-color: #a83434;
+}
+.close:before {
+    transform: rotate(45deg);
+}
+.close:after {
+    transform: rotate(-45deg);
+}
+
+/* custom shopping cart */
+.cart-item-picture {
+    width: 84px;
+    height: 84px;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+}
+
+.cart-item-title {
+    font-size: 1.1em;
+    font-weight: 400;
+    color: #1e7e34;
+}
+
+.btn.plus {
+    height: 30px;
+    width: 32px;
+    padding: 0px;
+}
+.btn.minus {
+    height: 30px;
+    width: 32px;
+    padding: 0px;
+}
+
+.quantity-button {
+    margin-top: -10px;
+    font-size: 23px;
+    position: relative;
+    top: -4px;
 }
